@@ -130,10 +130,12 @@ public interface StorageServiceMBean
      * This method returns the N endpoints that are responsible for storing the
      * specified key i.e for replication.
      *
+     * @param table keyspace name also known as table
+     * @param cf Column family name
      * @param key - key for which we need to find the endpoint return value -
      * the endpoint responsible for this key
      */
-    public List<InetAddress> getNaturalEndpoints(String table, byte[] key);
+    public List<InetAddress> getNaturalEndpoints(String table, String cf, String key);
     public List<InetAddress> getNaturalEndpoints(String table, ByteBuffer key);
 
     /**
